[package]
name = "join_tables"
version = "0.1.0"
authors = ["Aleksandrov Vladimir <invis87@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
getopts = "^0.2"
log = "^0.4"
env_logger = "^0.7"
tokio = { version = "^0.2", features = ["macros","sync", "rt-threaded"] }

